Revert "updating git ignore"
This reverts commit 5ec0e6635ea15f2c23c235dbca97f969fef9cf89.

--- a/.gitignore
+++ b/.gitignore
@@ -372,6 +372,7 @@ sysinfo.txt
 18W --Intro to Game & Simulation (SEC. 002) COMP_391 - Atalho.lnk
 **/COMP391BREAKOUT
 COMP391BREAKOUT.zip
+**/COMP391FINDINGHOME
 **/COMP391PACMAN
 **/COMP391PACMAN.zip
 **/COMP391SPACEINVADERS
